# txs-status

./: .dockerignore  Dockerfile  README.md  db_manager.py  docker-compose.yml  fastapi_server.py  nginx.conf  pyproject.toml  requirements.txt  settings.py  transactions_fetcher.py
